--- a/index.html
+++ b/index.html
@@ -57,6 +57,89 @@
             >
           </li>
         </ul>
+        <button type="button" class="header__menu-button" href="">
+          <svg class="header__menu-icon" width="40" height="40">
+            <use href="./images/icons.svg#menu-open"></use>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Menu -->
+      <div class="menu">
+        <h2 class="visually-hidden">Навігаційне меню</h2>
+        <div class="nav-menu">
+          <ul class="nav-menu_list list">
+            <li class="nav-menu_item">
+              <a href="./index.html" class="nav-menu_link link nav-menu_link--current-page"
+                >Студія</a
+              >
+            </li>
+            <li class="nav-menu_item">
+              <a href="./portfolio.html" class="nav-menu_link link">Портфоліо</a>
+            </li>
+            <li class="nav-menu_item"><a href="" class="nav-menu_link link">Контакти</a></li>
+          </ul>
+        </div>
+
+        <div class="menu-contacts">
+          <ul class="menu-contacts__list list">
+            <li class="menu-contacts__item">
+              <a class="menu-contacts__link link" href="tel:+380961111111"> +38 096 111 11 11</a>
+            </li>
+            <li class="menu-contacts__item">
+              <a class="menu-contacts__link link" href="mailto:info@devstudio.com">
+                info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="menu-socials">
+          <ul class="menu-socials__list list">
+            <li class="menu-socials__item">
+              <a
+                class="menu-socials__link link"
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Instagram
+              </a>
+            </li>
+            <li class="menu-socials__item">
+              <a
+                class="menu-socials__link link"
+                href="https://twitter.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Twitter
+              </a>
+            </li>
+            <li class="menu-socials__item">
+              <a
+                class="menu-socials__link link"
+                href="https://www.facebook.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Facebook
+              </a>
+            </li>
+            <li class="menu-socials__item">
+              <a
+                class="menu-socials__link link"
+                href="https://www.linkedin.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >LinkedIn
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <button type="button" class="menu__close-btn">
+          <svg class="menu__close-icon" width="40" height="40">
+            <use href="./images/icons.svg#menu-close"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -75,7 +158,7 @@
       <section class="features-section section">
         <div class="container">
           <h2 class="section-title visually-hidden">Переваги</h2>
-          <ul class="features-list list">
+          <ul class="features-list list grid-set">
             <li class="features-list__item">
               <div class="features-list__wrapper">
                 <svg class="features-list__icon" width="70" height="70">
@@ -450,7 +533,7 @@
       <section class="clients-section section">
         <div class="container">
           <h2 class="clients-section__title section-title">Постійні клієнти</h2>
-          <ul class="clients-list list">
+          <ul class="clients-list list grid-set">
             <li class="clients-list__item">
               <a
                 href=""
@@ -535,7 +618,7 @@
 
       <!-- Footer -->
       <footer class="footer">
-        <div class="container footer__container">
+        <div class="footer__container container">
           <div class="footer__addr-wrap">
             <a class="footer__logo logo link" href="./index.html" lang="en"
               >Web<span class="logo logo--light-color">Studio</span></a
@@ -554,7 +637,7 @@
                     >info@example.com</a
                   >
                 </li>
-                <li class="addr-item">
+                <li class="footer-addr__item">
                   <a class="footer-addr__link link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
               </ul>
