--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header">
-      <div class="header__container container">
+    <header class="header container">
+      <div class="header__container">
         <a class="logo header__logo link" href="./index.html" lang="en"
           >Web<span class="logo logo--dark-color">Studio</span></a
         >
@@ -59,6 +59,11 @@
             >
           </li>
         </ul>
+        <a class="header__menu-link link" href="">
+          <svg class="header__menu-icon" width="40" height="40">
+            <use href="./images/icons.svg#menu"></use>
+          </svg>
+        </a>
       </div>
     </header>
 
@@ -85,7 +90,7 @@
             </li>
           </ul>
           <ul class="project-list list grid-set">
-            <li class="project-list__item grid-item">
+            <li class="project-list__item">
               <a class="project-list__link link" href="">
                 <div class="project-thumb">
                   <img
@@ -109,7 +114,7 @@
                 </div>
               </a>
             </li>
-            <li class="project-list__item grid-item">
+            <li class="project-list__item">
               <a class="project-list__link link" href="">
                 <div class="project-thumb">
                   <img
@@ -135,7 +140,7 @@
                 </div>
               </a>
             </li>
-            <li class="project-list__item grid-item">
+            <li class="project-list__item">
               <a class="project-list__link link" href="">
                 <div class="project-thumb">
                   <img
@@ -159,7 +164,7 @@
                 </div>
               </a>
             </li>
-            <li class="project-list__item grid-item">
+            <li class="project-list__item">
               <a class="project-list__link link" href="">
                 <div class="project-thumb">
                   <img
@@ -183,7 +188,7 @@
                 </div>
               </a>
             </li>
-            <li class="project-list__item grid-item">
+            <li class="project-list__item">
               <a class="project-list__link link" href="">
                 <div class="project-thumb">
                   <img
@@ -207,7 +212,7 @@
                 </div>
               </a>
             </li>
-            <li class="project-list__item grid-item">
+            <li class="project-list__item">
               <a class="project-list__link link" href="">
                 <div class="project-thumb">
                   <img
@@ -233,7 +238,7 @@
                 </div>
               </a>
             </li>
-            <li class="project-list__item grid-item">
+            <li class="project-list__item">
               <a class="project-list__link link" href="">
                 <div class="project-thumb">
                   <img
@@ -259,7 +264,7 @@
                 </div>
               </a>
             </li>
-            <li class="project-list__item grid-item">
+            <li class="project-list__item">
               <a class="project-list__link link" href="">
                 <div class="project-thumb">
                   <img
@@ -283,7 +288,7 @@
                 </div>
               </a>
             </li>
-            <li class="project-list__item grid-item">
+            <li class="project-list__item">
               <a class="project-list__link link" href="">
                 <div class="project-thumb">
                   <img
